[package]
name = "riscv-build-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
codegen-units = 4
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = false
panic = "abort"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false

[profile.test]
codegen-units = 16
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false

[dependencies]
rsa = { version = "0.9.7", default-features = false }
rand_core = { version = "0.6.4" }
wee_alloc = { version = "0.4.5", features = ["static_array_backend"] }

[dev-dependencies]
rand = { version = "0.8.4" }